examples/nginx/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: nginx-example
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - container
        from:
          kind: ImageStreamTag
          namespace: nginx-example
          name: "nginx-example:latest"
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: nginx-example
  template:
    metadata:
      labels:
        app: nginx-example
    spec:
      containers:
        - name: container
          image: image-registry.openshift-image-registry.svc:5000/nginx-example/nginx-example:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
