examples/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-example
  labels:
    app: nginx-example
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-version: 1.20-ubi9
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app: nginx-example
    #deployment: nginx-example
status:
  loadBalancer: {}
