examples/nginx/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-example
  labels:
    app: nginx-example
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-version: 1.20-ubi9
spec:
  to:
    kind: Service
    name: nginx-example
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
